# R2GUESS

./: DESCRIPTION  MD5  NAMESPACE  cleanup  configure  configure.ac
R/: Analysis.permutation.R  Extend.R2GUESS.R  FDR.permutation.R  Postprocess.R2GUESS.R  R2GUESS.R  R2GUESS.perm.R  Resume.R2GUESS.R  as.ESS.object.R  check.convergence.R  example.as.ESS.object.R  get.best.models.R  get.g.sweep.R  get.sweep.best.model.R  plot.ESS.R  plotMPPI.R  plotcim.R  plotcim.explore.R  sample.beta.R  wrapper.R
man/: Analysis.permutation.Rd  FDR.permutation.Rd  Postprocess.R2GUESS.Rd  R2GUESS.Rd  Resume.R2GUESS.Rd  as.ESS.object.Rd  plotMPPI.Rd
src/: Makefile.in  Makefile.win  Makevars.win  install.libs.R
src/Classes/: CM.h  DR.h  Double_Matrices.h  Double_Matrices_cont.h  Int_Matrices.h  Int_Matrices_var_dim.h  Move_monitor.h  Prior_param.h  String_Matrices.h  Temperatures.cc  Temperatures.h  g_AdMH.cc  g_AdMH.h
src/Main/: GUESS.cc
src/Routines/: cond_post.cc  cond_post.h  dyn_name.cc  dyn_name.h  matrix_handling.h  moves.cc  moves.h  post_processing.cc  post_processing.h  rand.cc  rand.h  regression.h  xml_file_read.cc  xml_file_read.h  xml_file_write.cc  xml_file_write.h
tools/: cula.m4
